    - fixed hanging notes which occured when note-off event had the exact
      same time stamp as the voice's note-on event and occured both in the
      same audio fragment cycle (fixes bug #112)
    - added support for the "fine tune" and "pitch bend range"
      instrument-level gig parameters
    - fixed minor artifacts in pitch bend handling

  * LSCP server:
    - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain sampler channels (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP event "DEVICE_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain MIDI input devices (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP commands: FIND LOST DB_INSTRUMENT_FILES and
      SET DB_INSTRUMENT FILE_PATH
    - added new LSCP command: SEND CHANNEL MIDI_DATA which can be used by
      frontends to send MIDI messages to specific sampler channel
    - added two additional fields to GET FILE INSTRUMENT INFO command -
      KEY_BINDINGS and KEYSWITCH_BINDINGS
    - bugfix: the bank number provided by MIDI_INSTRUMENT_INFO notifications
      was incorrect
    - Optimized the retrieval of the MIDI instrument mappings
    - added new LSCP command "SET VOICES" to globally alter the maximum
      amount of voices, added new LSCP event "GLOBAL_INFO:VOICES" which will
      be triggered respectively
    - added new LSCP command "SET STREAMS" to globally alter the maximum
      amount of disk streams, added new LSCP event "GLOBAL_INFO:STREAMS"
      which will be triggered respectively
    - bugfix: retry if "select" returns EINTR (this fixes a crash when
      a gigedit file dialog is opened)
    - close all connections when LSCPServer is deleted

  * Bug fixes:
    - fixed a crash which occurs when removing a sampler channel waiting
      to start instrument loading after another channel